<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_tab_selector"
        android:title="@string/home_nav_main"/>

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/home_sort_tab_selector"
        android:title="@string/home_nav_sort"/>



    <item
        android:id="@+id/menu_shopping_car"
        android:icon="@drawable/home_shopping_tab_selector"
        android:title="@string/home_nav_shopping_car"/>

    <item
        android:id="@+id/menu_orderform"
        android:icon="@drawable/home_order_tab_selector"
        android:title="@string/home_nav_orderform"/>
    <item
        android:id="@+id/menu_me"
        android:icon="@drawable/home_me_tab_selector"
        android:title="@string/home_nav_me"/>


</menu>